css/style.css
/* Created by Sha Huang */

* {
    margin: 0;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 2em;
    margin: 0;
    background-color: #FAFAFA;
}

nav {
    background-color: lightblue;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    padding-left: 0;
    margin: 0;
    list-style: none;
}

nav li {
    flex: 1;
    text-align: center;
}

nav li a {
    display: block;
    padding: 1rem 0rem;
    color: white;
    text-decoration: none;
}

nav li:hover {
    background-color: lightcyan;
    transition: 0.5s;
}

nav a:hover {
    text-decoration: solid;
    color: darkgoldenrod;
    transition: 0.5s;
}

section {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin: 0.5rem;
    padding: 2rem;
    border-radius: 0.6rem;
}

section:nth-of-type(2n) {
    background-color: paleturquoise;
}

section:nth-of-type(2n+3) {
    flex-direction: row-reverse;
}

section:hover {
    transition: 0.7s;
    box-shadow: 0 0 30px lightseagreen;
}

h1, h2, h3 {
    width: 100%;
    padding: 2rem 0rem;
    text-align: center;
}

article {
    flex: 1;
    margin: 1rem;
    padding: 2rem;
}

article svg {
    margin: 10px 8px 10px 8px;
}

article svg:hover {
    margin: 5px 8px 15px 8px;
    transition: 0.3s;
}

article img {
    border-radius: 2rem;
}

.button {
    display: inline-block;
    padding: 10px 30px;
    border-radius: 10px;
    color: white;
    background-color: #007bff;
    text-align: center;
    text-decoration: none;
}

article .button:hover {
    background-color: purple;
    transition: 0.5s;
}

footer {
    display: flex;
    background-color: #a7ffeb;
}

footer div {
    flex: 1;
    display: flex;
    padding: 1rem 5rem;
}

footer div a {
    padding: 0.5rem 3rem 0.5rem 0rem;
}

footer div a:hover {
    padding: 0.2rem 3rem 0.8rem 0rem;
    transition: 0.3s;
}

@media (max-width: 1100px) {
    section:nth-of-type(n), footer {
        flex-direction: column;
    }

    body {
        font-size: 1.5em;
    }

    section {
        padding: 2rem 1rem;
    }

    article {
        margin: 1rem 0rem;
        padding: 1rem 0.5rem;
    }

    footer div {
        padding: 1rem 2.5rem;
    }
}

